[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagination-star"
version = "0.1.0"
description = "imagination* standalone runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
imagination = "imagination.cli:main"
